kubernetes/apps/home-assistant/templates/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "home-assistant.blarc.my.id"
  rules:
    - backendRefs:
      - name: home-assistant
        port: 8123
      matches:
        - path:
            type: PathPrefix
            value: /
